--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 a {
     text-decoration: none;
-    margin-right: .5em;
+    margin-right: 1em;
     font-weight: 600;
     color: #EFC75E;
     margin-top: .5em;
@@ -41,6 +41,11 @@ i {
 .container i:hover, .container i:focus {
     border-bottom: 2px solid #EFC75E;
     color:  #EFC75E;
+}
+
+.mobile-btn {
+    color: #EFC75E;
+    display: none;
 }
 
 button:hover, button:focus {
@@ -81,13 +86,16 @@ h2 {
 /* ====== Layout ====== */
 
 header { 
-    text-align: center;
-    margin: 1em 0;
+    display: flex;
+    margin: 1em auto;
+    align-items: center;
+    width: 90%;
+    justify-content: space-between;
 }
 
 .logo {
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
 }
 
@@ -130,4 +138,28 @@ button {
 .projects img {
     width: 40%;
     margin-left: 1em;
+}
+
+@media (max-width:600px) {
+    .container, .about img,
+    .form {
+        width: 90%;
+    }
+
+    nav a {
+        display: block;
+        margin-bottom: 1em;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .mobile-btn {
+        display: block;
+    }
+
+    .mobile-btn:hover nav {
+        display: block;
+    }
 }
