--- a/style.css
+++ b/style.css
@@ -86,11 +86,29 @@ h2 {
 /* ====== Layout ====== */
 
 header { 
-    display: flex;
     margin: 1em auto;
-    align-items: center;
     width: 90%;
+}
+
+.wrapper, header,
+.services {
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.services-wrapper {
+    margin-top: 2em;
+}
+
+.box {
+    width: 45%;
+    margin: 2em 0;
+}
+
+.box img {
+    width: 100%;
+    height: 300px;
 }
 
 .logo {
@@ -110,8 +128,21 @@ footer {
     text-align: center;
 }
 
+.forabout {
+    width: 70%;
+}
+
+.about {
+    width: 40%;
+}
+
+.content {
+    width: 50%;
+    text-align: left;
+}
+
 .about img {
-    width: 30%;
+    width: 100%;
     border-radius: 50%;
 }
 
@@ -140,15 +171,25 @@ button {
     margin-left: 1em;
 }
 
+/* ======= Media Query ======= */
+
 @media (max-width:600px) {
     .container, .about img,
-    .form {
+    .form, .about, .content, .box {
         width: 90%;
+    }
+
+    .box img {
+        height: 200px;
     }
 
     nav a {
         display: block;
         margin-bottom: 1em;
+    }
+
+    .content h2 {
+        text-align: center;
     }
 
     nav {
@@ -164,7 +205,11 @@ button {
         display: block;
     }
 
-    .mobile-btn:hover +nav {
+    .mobile-btn:hover +nav, nav:hover {
         display: block;
+    }
+
+    .wrapper, .services {
+        flex-direction: column;
     }
 }
